--- a/blocks/form/__heading/form__heading.css
+++ b/blocks/form/__heading/form__heading.css
@@ -7,3 +7,11 @@
     color: #000000;
     margin: 0;
 }
+@media screen and (max-width: 425px) {
+    .form__heading {
+    
+        font-size: 16px;
+        line-height: 22px;
+
+    }
+}
