--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -3,11 +3,20 @@
     background-repeat: no-repeat;
     width: 150px;
     height: 50px;
+    display: block;
+    align-self: center;
+    margin-left: auto;
+}
+.profile__button:hover {
+    opacity: 0.5;
 }
 @media screen and (max-width: 600px) {
     .profile__button {
         
-        /* width: 282px; */
+      margin-left: 0;
+      align-self: center;
+    
+        
         
     }
 }
