--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,7 @@
     font-size: 42px;
     line-height: 48px;
     color: #FFFFFF;
+    margin: 30px 0 16px;
 }
 @media screen and (max-width: 600px) {
     .profile__name {
