--- a/pages/index.css
+++ b/pages/index.css
@@ -11,8 +11,7 @@
 @import "../blocks/profile/__name/profile__name.css";
 @import "../blocks/profile/__description/profile__description.css";
 @import "../blocks/profile/__edit-button/profile__edit-button.css";
-@import "../blocks/profile/__edit-button-flex/profile__edit-button-flex.css";
-@import "../blocks/profile/__button-flex/profile__button-flex.css";
+@import "../blocks/profile/__box/profile__box.css";
 @import "../blocks/elements/elements.css";
 @import "../blocks/element/element.css";
 @import "../blocks/element/__image/element__image.css";
@@ -20,7 +19,6 @@
 @import "../blocks/element/__likes/element__likes.css";
 @import "../blocks/element/__flexbox/element__flexbox.css";
 @import "../blocks/element/__likes-center/element__likes-center.css";
-/*  */
 @import "../blocks/footer/footer.css";
 @import "../blocks/footer/__copy/footer__copy.css";
 @import "../vendor/inter/fonts.css";
@@ -28,4 +26,11 @@
 @import "../blocks/popup/__body/popup__body.css";
 @import "../blocks/popup/__content/popup__content.css";
 @import "../blocks/popup/__close/popup__close.css";
-@import "../blocks/form/__heading/form__heading.css";
+@import "../blocks/form/form.css";
+@import "../blocks/form/__heading/form__heading.css"; 
+@import "../blocks/form/__input-container/form__input-container.css";
+@import "../blocks/form/__item/form__item.css";
+@import "../blocks/form/__handler/form__handler.css";
+@import "../blocks/form/__button/form__button.css";
+@import "../blocks/form/__nameinput/form__nameinput.css";
+@import "../blocks/form/__jobinput/form__jobinput.css";
