--- a/blocks/popup/__form-heading/popup__form-heading.css
+++ b/blocks/popup/__form-heading/popup__form-heading.css
@@ -1,4 +1,4 @@
-.form__heading {
+.popup__form-heading {
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
@@ -8,7 +8,7 @@
     margin: 0;
 }
 @media screen and (max-width: 425px) {
-    .form__heading {
+    .popup__form-heading {
     
         font-size: 16px;
         line-height: 22px;
