--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,6 @@
 .element {
     /* border: 1px solid #000;  */
-    background-color: #CCC;
+    background-color: #fff;
     max-width: 282px;
     border-radius: 10px;  
 }
