--- a/blocks/footer/__copy/footer__copy.css
+++ b/blocks/footer/__copy/footer__copy.css
@@ -38,7 +38,10 @@
 @media screen and (max-width: 320px) {
     .footer__copy {
         margin: 48px 20px 36px;  
-    
+        font-size: 14px;
+        line-height: 17px;
+
+
         
     }
 }
