--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,4 +2,7 @@
     max-width: 880px;
     margin: 0 auto;
     /* border: 1px solid silver; */
+    /* border-bottom: 1px solid rgba(0, 0, 0, .7); */
+    border-bottom: 1px solid #545454;
+
 }
