--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,7 @@
 .popup__close {
-    background-image: url('../../../images/Close Icon.svg');
+    background-image: url('../../../images/close icon.svg');
+    background-color: transparent;
+    border: 0;
     height: 58px;
     width: 58px;
     display: block;
@@ -8,13 +10,15 @@
     right: -50px;
 }
 .popup__close:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
 @media screen and (max-width: 425px) {
     .popup__close {
-    
-    top: -70px;
-    right: 0; 
+        width: 26px;
+        height: 26px;
+        top: -35px;
+        right: 0;
+        background-size: cover; 
 
     }
 }
