--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     padding: 34px 36px 37px;
     position: relative;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 425px) {
@@ -25,7 +26,8 @@
 @media screen and (max-width: 320px) {
     .popup__content {
     
-    max-width: 220px;
+    max-width: 262px;
+    padding: 25px 10px 25px;
 
     }
 }
