--- a/blocks/popup/__form-button/popup__form-button.css
+++ b/blocks/popup/__form-button/popup__form-button.css
@@ -1,5 +1,5 @@
 .popup__form-button {
-font-family: Inter;
+font-family: 'Inter', ‘Arial’, sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
@@ -12,4 +12,7 @@ background-color: black;
 border: 0;
 margin: auto;
 
+}
+.popup__form-button:hover {
+    opacity: 0.8;
 }
