--- a/blocks/popup/__form-item/popup__form-item.css
+++ b/blocks/popup/__form-item/popup__form-item.css
@@ -1,17 +1,17 @@
 .popup__form-item {
     border: 0;
     width: 100%;
-    height: 24px;
+    /* height: 24px; */
     box-sizing: border-box;
-    border-bottom: 1px solid #bcbcc4;
+    /* border-bottom: 1px solid #bcbcc4; */
     background-color: transparent;
     margin-top: 30px;
     padding: 13px 5px;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-
     color: #000000;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
