--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,21 +1,25 @@
 .profile__button {
-    background-image: url('../../../images/Add Button.svg');
+    background-image: url('../../../images/add button.svg');
     background-repeat: no-repeat;
     width: 150px;
     height: 50px;
     display: block;
     align-self: center;
     margin-left: auto;
+    border-radius: 2px;
+    background-color: transparent;
+    border: 0;
 }
 .profile__button:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
 @media screen and (max-width: 600px) {
     .profile__button {
-        
+        background-image: url('../../../images/add button28250.svg');  
       margin-left: 0;
       align-self: center;
-    
+      width: 282px;
+      height: 50px;
         
         
     }
