--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,15 +4,19 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    
+    max-width: 294px;
     color: #FFFFFF;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
     .profile__description {
         font-size: 14px;
         line-height: 17px;
-        text-align: center;
+        text-align: right;
+        max-width: 282px;
 
     }
 }
