--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,12 +6,17 @@
     line-height: 48px;
     color: #FFFFFF;
     margin: 30px 0 16px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 294px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 750px) {
     .profile__name {
         font-size: 27px;
         line-height: 33px;
         text-align: center;
-
+        max-width: 190px;
+        margin-top: 22px;
     }
 }
