--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,5 @@
 .popup__close {
-    background-image: url('../../../images/close icon.svg');
+    background-image: url('../../../images/close-icon.svg');
     background-color: transparent;
     border: 0;
     height: 58px;
