--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,5 +1,5 @@
 .profile__button {
-    background-image: url('../../../images/add button.svg');
+    background-image: url('../../../images/add-button.svg');
     background-repeat: no-repeat;
     width: 150px;
     height: 50px;
@@ -15,7 +15,7 @@
 }
 @media screen and (max-width: 600px) {
     .profile__button {
-        background-image: url('../../../images/add button28250.svg');
+        background-image: url('../../../images/add-button28250.svg');
       margin-left: 0;
       align-self: center;
       width: 282px;
