--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-    background-image: url('../../../images/edit button.svg');
+    background-image: url('../../../images/edit-button.svg');
     height: 24px;
     width: 24px;
     background-repeat: no-repeat;
