--- a/blocks/popup/__form-button/popup__form-button.css
+++ b/blocks/popup/__form-button/popup__form-button.css
@@ -11,7 +11,9 @@ transition: opacity .4s;
 background-color: black;
 border: 0;
 margin: auto;
-
+height: 100%;
+width: 100%;
+border-radius: 2px;
 }
 .popup__form-button:hover {
     opacity: 0.8;
