--- a/blocks/element/__likes/element__likes.css
+++ b/blocks/element/__likes/element__likes.css
@@ -12,9 +12,9 @@
     
     opacity: 0.5;
 }
-.element__likes:active {
+/* .element__likes:active {
     background-image: url('../../../images/likesblack.svg');
     opacity: 1;
-} 
-
+}  */
+/* element__likes-active */
 
