--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,7 +2,8 @@
     /* border: 1px solid #000;  */
     background-color: #fff;
     max-width: 282px;
-    border-radius: 10px;  
+    border-radius: 10px; 
+    position: relative; 
 }
 @media screen and (max-width: 880px) {
     .element {
