"fix: Удалить повторение корзины на карточке , на мобильной версии"

--- a/blocks/element/__trash-icon/element__trash-icon.css
+++ b/blocks/element/__trash-icon/element__trash-icon.css
@@ -4,7 +4,8 @@
      position: absolute;
      top: 18px;
      left: 249px;
-    background-image: url('../../../images/trash.svg') ;
+    background-image: url('../../../images/trash.svg');
+    background-repeat: no-repeat;
 }
 
 .element__trash-icon:hover {
