fix: " обнулил дефолтные стили у кнопи element__trash-icon"

--- a/blocks/element/__trash-icon/element__trash-icon.css
+++ b/blocks/element/__trash-icon/element__trash-icon.css
@@ -6,6 +6,13 @@
      left: 249px;
     background-image: url('../../../images/trash.svg');
     background-repeat: no-repeat;
+
+
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
 }
 
 .element__trash-icon:hover {
