fix: "деформация карточки в мобильной версии  и курсор пойнтер  "

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,7 +3,8 @@
     background-color: #fff;
     max-width: 282px;
     border-radius: 10px;
-    position: relative; 
+    position: relative;
+    width: 282px; 
 }
 @media screen and (max-width: 880px) {
     .element {
